--- a/app/views/admin/restaurants/edit.html.erb
+++ b/app/views/admin/restaurants/edit.html.erb
@@ -34,7 +34,7 @@
         <div class="row field d-grid text-center mt-3">
           <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
           <div id="areas_select" >
-            <%= render partial: 'shared/restaurant_areas', locals: { areas: Area.all } %>
+            <%= render partial: 'shared/restaurant_areas', locals: { areas: @area } %>
           </div>
         </div>
 
