--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -57,7 +57,7 @@
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <p class="col-md-4 text-left">会員ステーサス</p>
+          <p class="col-md-4 text-left">会員状況</p>
           <%= f.radio_button :is_valid, true %>
           <%= f.label :is_valid, "有効", class: "valid ml-1" %>
           <%= f.radio_button :is_valid, false, class: "ml-4" %>
