--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -13,7 +13,7 @@
           <th>会員ID</th>
           <th>氏名</th>
           <th>メールアドレス</th>
-          <th>退会ステーサス</th>
+          <th>会員状況</th>
         </thead>
 
         <tbody>
