--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -57,7 +57,7 @@
         </tr>
 
         <tr>
-          <th>退会ステーサス</th>
+          <th>会員状況</th>
           <td>
             <% if @customer.is_valid == false %>
               <p class="customer_valid">退会</p>
