--- a/app/views/admin/restaurants/show.html.erb
+++ b/app/views/admin/restaurants/show.html.erb
@@ -67,7 +67,7 @@
         </tr>
 
         <tr>
-          <th>退会ステーサス</th>
+          <th>会員状況</th>
           <td>
             <% if @restaurant.is_valid == false %>
               <p class="restaurant_valid">退会</p>
