--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -10,9 +10,9 @@
       <table class="table table-hover mt-4">
         <thead class="table-secondary">
           <th>会員ID</th>
-          <th>氏名</th>
+          <th>店名</th>
           <th>メールアドレス</th>
-          <th>退会ステーサス</th>
+          <th>会員状況</th>
         </thead>
 
         <tbody>
