Change text_area of views/restaurant/menus/new.html.erb

--- a/app/views/restaurant/homes/edit.html.erb
+++ b/app/views/restaurant/homes/edit.html.erb
@@ -22,7 +22,7 @@
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :店舗紹介文, class: "col-md-3 text-left" %>
-            <%= f.text_area :introduction, class: "col-md-8" %>
+            <%= f.text_area :introduction, size: "20x7", class: "col-md-8" %>
           </div>
 
           <div class="row field d-grid text-center mt-4">
@@ -82,7 +82,7 @@
 
           <div class="row field d-grid text-center mt-4">
             <%= f.label :News, class: "col-md-3 text-left" %>
-            <%= f.text_area :news, class: "col-md-8" %>
+            <%= f.text_area :news, size: "20x7", class: "col-md-8" %>
           </div>
 
           <div class="row field d-grid offset-md-3">
