--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -32,12 +32,13 @@
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :税抜価格, class: "col-md-4 text-left" %>
-            <%= f.text_field :price, required: true, class: "col-md-3" %>円
+            <%= f.text_field :price, required: true, class: "col-md-3" %>
+            <span class ="ml-2">円</span>
           </div>
 
           <div class="row field d-grid text-center mt-3">
             <%= f.label :メニュー説明, class: "col-md-4 text-left" %>
-            <%= f.text_area :introduction, class: "col-md-6" %>
+            <%= f.text_area :introduction, size: "20x7", class: "col-md-6" %>
           </div>
 
           <div class="actions2 mt-4 offset-md-4">
