--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -5,6 +5,9 @@
         <h4 class="col-md-3 mt-5">メニュー新規登録</h4>
       </div>
 
+　　　<div class='flashing mt-2'>
+        <p>※現在登録されているデータは架空です</p>
+      </div>
       <% if @menu.errors.any? %>
         <%= @menu.errors.count %>件のエラーが発生しました
         <ul>
@@ -26,7 +29,7 @@
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :含まれるアレルゲン, class: "col-md-4 text-left" %>
+          <%= f.label :含まれるアレルゲン（全てにチェック）,class: "br-label col-md-4 text-left" %>
           <div class="allergies_check_boxes col-md-7">
             <%= f.collection_check_boxes(:allergy_ids, @allergies, :id, :allergen, include_hidden: false) do |a| %>
               <%= a.label { a.check_box + a.text } %>
@@ -38,8 +41,8 @@
 
         <div class="row field d-grid text-center mt-3">
           <%= f.label :税抜価格, class: "col-md-4 text-left" %>
-          <%= f.text_field :price, required: true, class: "col-md-3" %>
-          <p class="ml-2">円</p>
+          <%= f.text_field :price, required: true, class: "col-md-3 d-flex flex-row" %>
+          <span class ="ml-2">円</span>
         </div>
 
         <div class="row field d-grid text-center mt-3">
