Change layout of view

--- a/app/views/admin/allergies/edit.html.erb
+++ b/app/views/admin/allergies/edit.html.erb
@@ -14,7 +14,7 @@
           <%= form_with model: @allergy, url: admin_allergy_path, method: :patch do |f| %>
 
             <div class="field d-grid col-md-10 mt-4 text-center">
-              <%= f.label :アレルゲン %>
+              <%= f.label :allergen %>
               <%= f.text_field :allergen %>
             </div>
             <div class="row form-group mt-4 offset-4">
