--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-10 offset-1">
+    <div class="col-md-12">
       <h4 class="col-6 mt-5"><%= "#{@customer.full_name}さんの会員情報編集" %></h4>
       <% flash.each do |key, value| %>
          <p class="alert alert-<%= key %>">
@@ -23,36 +23,40 @@
 
 
         <div class="row field d-grid text-center">
-          <%= f.label :氏名, class: "col-md-4 text-left" %>
-          <%= f.text_field :first_name, autofocus: true, required: true, class: "col-md-3" %>
-          <%= f.text_field :last_name, autofocus: true, required: true, class: "col-md-3 ml-2" %>
+          <span class="col-md-3 text-left">名前</span>
+          <%= f.label :first_name, class: "col-md-1" %>
+          <%= f.text_field :first_name, autofocus: true, class: "col-md-2" %>
+          <%= f.label :last_name, class: "col-md-1" %>
+          <%= f.text_field :last_name, autofocus: true, class: "col-md-2" %>
         </div>
 
         <div class="row field d-grid text-center mt-4">
-          <%= f.label :フリガナ, class: "col-md-4 text-left" %>
-          <%= f.text_field :first_name_kana, autofocus: true, required: true, class: "col-md-3" %>
-          <%= f.text_field :last_name_kana, autofocus: true, required: true, class: "col-md-3 ml-2" %>
+          <span class="col-md-3 text-left">フリガナ</span>
+          <%= f.label :first_name_kana, class: "col-md-1" %>
+          <%= f.text_field :first_name_kana, autofocus: true, class: "col-md-2" %>
+          <%= f.label :last_name_kana, class: "col-md-1" %>
+          <%= f.text_field :last_name_kana, autofocus: true, class: "col-md-2" %>
         </div>
 
         <div class="row field d-grid text-center mt-4">
-          <%= f.label :メールアドレス, class: "col-md-4 text-left" %>
-          <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
+          <%= f.label :email, class: "col-md-4 text-left" %>
+          <%= f.email_field :email, autofocus: true, class: "col-md-4" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
+          <%= f.label :state_id, class: "col-md-4 text-left" %>
           <%= f.collection_select :state_id , State.all,:id,:state %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
+          <%= f.label :area_id, class: "col-md-4 text-left" %>
           <div id="areas_select_customer" >
             <%= render partial: 'shared/areas', locals: { areas: @area }  %>
           </div>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :電話番号（ハイフンなし）, class: "col-md-4 text-left" %><br />
+          <%= f.label :telephone_number, class: "col-md-4 text-left" %><br />
           <%= f.text_field :telephone_number, required: true, class: "col-md-3" %>
         </div>
 
