--- a/app/views/admin/restaurants/edit.html.erb
+++ b/app/views/admin/restaurants/edit.html.erb
@@ -22,44 +22,44 @@
         </div>
 
         <div class="row field d-grid text-center">
-          <%= f.label :店名, class: "col-md-4 text-left" %>
+          <%= f.label :name, class: "col-md-4 text-left" %>
           <%= f.text_field :name, autofocus: true, required: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
+          <%= f.label :state_id, class: "col-md-4 text-left" %>
           <%= f.collection_select :state_id , State.all,:id,:state %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
+          <%= f.label :area_id, class: "col-md-4 text-left" %>
           <div id="areas_select" >
             <%= render partial: 'shared/restaurant_areas', locals: { areas: @area } %>
           </div>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :それ以降の住所, class: "col-md-4 text-left" %>
+          <%= f.label :address, class: "col-md-4 text-left" %>
           <%= f.text_field :address, autofocus: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :電話番号（ハイフンなし）, class: "col-md-4 text-left" %><br />
+          <%= f.label :telephone_number, class: "col-md-4 text-left" %><br />
           <%= f.text_field :telephone_number, required: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-4">
-          <%= f.label :メールアドレス, class: "col-md-4 text-left" %>
+          <%= f.label :email, class: "col-md-4 text-left" %>
           <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :定休日, class: "col-md-4 text-left" %>
+          <%= f.label :regular_holiday, class: "col-md-4 text-left" %>
           <%= f.text_field :regular_holiday, required: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :営業時間, class: "col-md-4 text-left" %>
+          <%= f.label :business_hours, class: "col-md-4 text-left" %>
           <%= f.text_field :business_hours, required: true, class: "col-md-3" %>
         </div>
 
