--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-10 offset-1">
+    <div class="col-md-12">
       <h4 class="col-md-3 mt-5">会員情報編集</h4>
 
       <div class='flashing mt-2'>
@@ -11,24 +11,28 @@
         <%= form_with model: @customer, url: customers_information_path, method: :patch do |f| %>
 
           <div class="row mt-3">
-            <%= f.label :氏名, class: "col-md-3 text-left" %>
-            <%= f.text_field :first_name, autofocus: true, required: true, class: "col-md-3" %>
-            <%= f.text_field :last_name, required: true, class: "col-md-3 ml-2" %>
+            <span class="col-md-3 text-left">名前</span>
+            <%= f.label :first_name, class: "col-md-1" %>
+            <%= f.text_field :first_name, autofocus: true, class: "col-md-2" %>
+            <%= f.label :last_name, class: "col-md-1" %>
+            <%= f.text_field :last_name, autofocus: true, class: "col-md-2" %>
           </div>
 
           <div class="row mt-4">
-            <%= f.label :フリガナ, class: "col-md-3 text-left" %>
-            <%= f.text_field :first_name_kana, required: true, class: "col-md-3" %>
-            <%= f.text_field :last_name_kana, required: true, class: "col-md-3 ml-2" %>
+            <span class="col-md-3 text-left">フリガナ</span>
+            <%= f.label :first_name_kana, class: "col-md-1" %>
+            <%= f.text_field :first_name_kana, autofocus: true, class: "col-md-2" %>
+            <%= f.label :last_name_kana, class: "col-md-1" %>
+            <%= f.text_field :last_name_kana, autofocus: true, class: "col-md-2" %>
           </div>
 
           <div class="row mt-4">
-            <%= f.label :メールアドレス, class: "col-md-3 text-left" %>
-            <%= f.email_field :email, required: true, class: "col-md-6" %>
+            <%= f.label :email, class: "col-md-3 text-left" %>
+            <%= f.email_field :email, required: true, class: "col-md-4" %>
           </div>
 
           <div class="row mt-4">
-            <%= f.label :都道府県, class: "col-md-3 text-left" %>
+            <%= f.label :state_id, class: "col-md-3 text-left" %>
             <%= f.collection_select :state_id , State.all,:id,:state %>
           </div>
           <p class="offset-md-3 mt-2">
@@ -36,7 +40,7 @@
           </P>
 
           <div class="row mt-3">
-            <%= f.label :地域エリア, class: "col-md-3 text-left" %>
+            <%= f.label :area_id, class: "col-md-3 text-left" %>
             <div id="areas_select_customer" >
               <%= render partial: 'shared/areas', locals: { areas: @area  } %>
             </div>
@@ -49,8 +53,8 @@
           </p>
 
           <div class="row mt-4">
-            <%= f.label :電話番号（ハイフンなし）, class: "col-md-3 text-left" %>
-            <%= f.text_field :telephone_number, required: true, class: "col-md-6" %>
+            <%= f.label :telephone_number, class: "col-md-3 text-left" %>
+            <%= f.text_field :telephone_number, required: true, class: "col-md-4" %>
           </div>
 
           <div class="row mt-3">
