--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-11 offset-1">
+    <div class="col-md-12">
       <h4 class="col-md-3 mt-5">新規会員登録</h4>
 
       <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do  |f| %>
@@ -8,33 +8,33 @@
 
         <div class="row field d-grid text-center mt-3 mt-4">
           <span class="col-md-3 text-left">名前</span>
-          <%= f.label :（姓）, class: "col-md-1" %>
+          <%= f.label :first_name, class: "col-md-1" %>
           <%= f.text_field :first_name, autofocus: true, class: "col-md-3" %>
-          <%= f.label :（名）, class: "col-md-1" %>
+          <%= f.label :last_name, class: "col-md-1" %>
           <%= f.text_field :last_name, autofocus: true, class: "col-md-3" %>
         </div>
 
 
         <div class="row field d-grid text-center mt-3">
           <span class="col-md-3 text-left">フリガナ</span>
-          <%= f.label :セイ, class: "col-md-1" %>
+          <%= f.label :first_name_kana, class: "col-md-1" %>
           <%= f.text_field :first_name_kana, autofocus: true, class: "col-md-3" %>
-          <%= f.label :メイ, class: "col-md-1" %>
+          <%= f.label :last_name_kana, class: "col-md-1" %>
           <%= f.text_field :last_name_kana, autofocus: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :メールアドレス, class: "col-md-4 text-left" %>
+          <%= f.label :email, class: "col-md-4 text-left" %>
           <%= f.email_field :email, autofocus: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
+          <%= f.label :state_id, class: "col-md-4 text-left" %>
           <%= f.collection_select :state_id , State.all,:id,:state, {selected: 1} %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
+          <%= f.label :area_id, class: "col-md-4 text-left" %>
           <div id="areas_select_customer" >
             <%= render partial: 'shared/areas', locals: { areas: Area.where(state_id: 1) } %>
           </div>
@@ -47,13 +47,13 @@
         </p>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :電話番号（ハイフンなし）, class: "col-md-4 text-left" %><br />
+          <%= f.label :telephone_number, class: "col-md-4 text-left" %><br />
           <%= f.text_field :telephone_number, autofocus: true, class: "col-md-3" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
           <div class="col-md-4 text-left">
-            <%= f.label :パスワード %>
+            <%= f.label :password %>
             <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> 文字以上)</em>
             <% end %>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :パスワード（確認用）, class: "col-md-4 text-left" %><br />
+          <%= f.label :password_confirmation, class: "col-md-4 text-left" %><br />
           <%= f.password_field :password_confirmation, class: "col-md-3" %>
         </div>
 
