--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -18,12 +18,12 @@
           </div>
 
           <div class="row field d-grid text-center mt-3">
-            <%= f.label :住所（都道府県）, class: "col-md-4 text-left" %>
+            <%= f.label :state_id, class: "col-md-4 text-left" %>
             <%= f.collection_select :state_id , State.all,:id,:state, {selected: 1} %>
           </div>
 
           <div class="row field d-grid text-center mt-3">
-            <%= f.label :住所（地域エリア）, class: "col-md-4 text-left" %>
+            <%= f.label :area_id, class: "col-md-4 text-left" %>
             <div id="areas_select_customer" >
               <%= render partial: 'shared/areas', locals: { areas: Area.where(state_id: 1) } %>
             </div>
