--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -11,17 +11,19 @@
 
         <%= form_with model: @menu ,url: restaurant_restaurant_menu_path, method: :patch do |f| %>
           <div class="row field d-grid text-center mt-4">
-            <%= f.label :料理画像, class: "col-md-4 text-left" %>
+            <%= f.label :image, class: "col-md-4 text-left" %>
             <%= f.file_field :image, accept: "image/*", class: "col-md-6", style: "padding: 0;" %>
           </div>
 
           <div class="row field d-grid text-center mt-3">
-            <%= f.label :メニュー名, class: "col-md-4 text-left" %>
+            <%= f.label :name, class: "col-md-4 text-left" %>
             <%= f.text_field :name, autofocus: true, required: true, class: "col-md-6" %>
           </div>
 
           <div class="row field d-grid text-center mt-3">
-            <%= f.label :含まれるアレルゲン, class: "col-md-4 text-left" %>
+            <%= f.label :含まれるアレルゲン, class: "col-md-4 text-left" do %>
+              含まれるアレルゲン<br>（全てにチェック）
+            <% end %>
             <div class="allergies_check_boxes col-md-6">
               <%= f.collection_check_boxes(:allergy_ids, @allergies, :id, :allergen,checked:@menu.allergy_ids, include_hidden: false) do |a| %>
                 <%= a.label { a.check_box + a.text } %>
@@ -31,13 +33,13 @@
           </div>
 
           <div class="row field d-grid text-center mt-3">
-            <%= f.label :税抜価格, class: "col-md-4 text-left" %>
+            <%= f.label :price, class: "col-md-4 text-left" %>
             <%= f.text_field :price, required: true, class: "col-md-3" %>
             <span class ="ml-2">円</span>
           </div>
 
           <div class="row field d-grid text-center mt-3">
-            <%= f.label :メニュー説明, class: "col-md-4 text-left" %>
+            <%= f.label :introduction, class: "col-md-4 text-left" %>
             <%= f.text_area :introduction, size: "20x7", class: "col-md-6" %>
           </div>
 
