--- a/app/views/customer/homes/about.html.erb
+++ b/app/views/customer/homes/about.html.erb
@@ -14,7 +14,7 @@
             飲食店のお気に入り登録やご自身のアレルゲンを登録し、</br>
             より簡易的に利用したい場合にはご登録が必要になります。
           </p>
-          <%= image_tag 'about_image.jpeg', class: "col-sm-10 col-md-8" %>
+          <%= image_tag 'about_image.jpg', class: "col-sm-10 col-md-8" %>
         </div>
 
         <h4 class="mt-5">地域エリアについて</h4>
