Change about.html.erb of views/restaurant

--- a/app/views/customer/homes/about.html.erb
+++ b/app/views/customer/homes/about.html.erb
@@ -5,7 +5,7 @@
         <h1 class="mt-4"><strong>About</strong></h1>
         <div>
           <h4>このサイトについて</h4>
-          <p class="about about2">
+          <p class="about">
             Enme（エンミー）は食物アレルギーにより外食に不安を持っている方々にも</br>
             楽しい食事（Enjoyable meal）をしていただける様、</br>
             アレルギー表記を行なっている関西の飲食店にご協力いただき</br>
