--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -36,7 +36,7 @@
       <% end %>
     </div>
     <div class= "col-md-8 mt-4">
-      <%#= safe_join(@restaurant.introduction.split("\n"),tag(:br)) %>
+      <%= safe_join(@restaurant.introduction.split("\n"),tag(:br)) %>
     </div>
   </div>
   <div class= "row">
