Change count of views/restaurant/menus/index.html.erb

--- a/app/views/restaurant/menus/index.html.erb
+++ b/app/views/restaurant/menus/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-10 offset-1">
       <div class ="row mt-5">
-        <h4 class="col-md-3"><p class="p_1">店舗メニュー一覧画面 <span style="font-size: 15px"><%= "(全#{@menu_count}件)"%></span></p></h4>
+        <h4 class="col-md-3"><p class="p_1">店舗メニュー一覧画面 <span style="font-size: 15px"><%= "(全#{@restaurant, @menu_count}件)"%></span></p></h4>
       </div>
 
       <div class='flashing mt-2'>
