--- a/app/views/customer/restaurants/index.html.erb
+++ b/app/views/customer/restaurants/index.html.erb
@@ -39,7 +39,7 @@
             <% end %>
           </tbody>
         </table>
-        <div class="offset-5 mt-3"><%= paginate @restaurants_page %></div>
+        <div class="offset-5 mt-3"><%= paginate @restaurants %></div>
       </div>
     </div>
   </div>
