--- a/app/views/customer/menus/show.html.erb
+++ b/app/views/customer/menus/show.html.erb
@@ -17,7 +17,9 @@
 
         <div class="col-md-7 mt-5 menu_show">
           <h5><strong><%= @menu.name %></strong></h5>
-          <div class="mt-3"><%= @menu.introduction %></div>
+          <div class="mt-3">
+            <%= simple_format(@menu.introduction) %>
+          </div>
           <div class="mt-3">
             <p class="menu_allergen"><strong>含まれるアレルゲン</strong></p>
             <% @menu.menu_having_allergies.each do |e| %>
