--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -23,7 +23,9 @@
 
         <div class="col-md-7 mt-5 item_show">
           <h5><strong><%= @menu.name %></strong></h5>
-          <div class="mt-3"><%= safe_join(@menu.introduction.split("\n"),tag(:br)) %></div>
+          <div class="mt-3">
+            <%= simple_format(@menu.introduction) %>
+          </div>
           <div class="mt-3">
             <p class="menu_allergen"><strong>アレルゲン</strong></p>
             <% @menu.menu_having_allergies.each do |e| %>
