Change views of restaurant and customer

--- a/app/views/restaurant/registrations/new.html.erb
+++ b/app/views/restaurant/registrations/new.html.erb
@@ -40,7 +40,7 @@
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :telephone_number, class: "col-md-4 text-left" %><br />
+          <%= f.label :telephone_number, class: "col-md-4 text-left" %>
           <%= f.text_field :telephone_number, class: "col-md-3" %>
         </div>
 
