--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -18,17 +18,17 @@
           <div class="row mt-3">
             <span class="col-md-3 text-left">名前</span>
             <%= f.label :first_name, class: "col-md-1" %>
-            <%= f.text_field :first_name, autofocus: true, class: "col-md-2" %>
+            <%= f.text_field :first_name, autofocus: true, required: true, class: "col-md-2" %>
             <%= f.label :last_name, class: "col-md-1" %>
-            <%= f.text_field :last_name, autofocus: true, class: "col-md-2" %>
+            <%= f.text_field :last_name, autofocus: true, required: true, class: "col-md-2" %>
           </div>
 
           <div class="row mt-4">
             <span class="col-md-3 text-left">フリガナ</span>
             <%= f.label :first_name_kana, class: "col-md-1" %>
-            <%= f.text_field :first_name_kana, autofocus: true, class: "col-md-2" %>
+            <%= f.text_field :first_name_kana, autofocus: true, required: true, class: "col-md-2" %>
             <%= f.label :last_name_kana, class: "col-md-1" %>
-            <%= f.text_field :last_name_kana, autofocus: true, class: "col-md-2" %>
+            <%= f.text_field :last_name_kana, autofocus: true, required: true, class: "col-md-2" %>
           </div>
 
           <div class="row mt-4">
