Change action name of views/customer/restaurants/simple_serch.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,8 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to member_search_restaurants_path, class:"nav-link text-light" do %>
-                    <strong>会員検索</strong>
+                  <%= link_to simple_search_restaurants_path, class:"nav-link text-light" do %>
+                    <strong>飲食店簡易検索</strong>
                   <% end %>
                 </li>
                 <li>
