--- a/app/views/restaurant/menus/show.html.erb
+++ b/app/views/restaurant/menus/show.html.erb
@@ -35,6 +35,7 @@
             <!--<th>税込価格</th>-->
           <div class="mt-5"><span>税抜価格（税込価格）</span><br><strong class="price"><%= "#{@menu.price}円" %>(<%= "#{@menu.with_tax_price}円" %>)　</strong></div>
           <div>
+            <% if current_restaurant == @menu.restaurant %>
             <%= link_to edit_restaurant_restaurant_menu_path(@menu), class:"btn btn-info active mt-5" do %>
               <i class="fas fa-pen-nib"></i>
               編集する
@@ -43,6 +44,7 @@
               <i class="fas fa-trash"></i>
               削除する
             <% end %>
+            <%end%>
           </div>
         </div>
       </div>
