Remove ID from URL of customer/show and edit

--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -76,7 +76,7 @@
             <%= button_tag type: :submit, class: "btn btn-success active mt-4" do %>
               <i class="fas fa-save"></i> 編集内容を保存
             <% end %>
-            <%= link_to customers_confirm_path(@customer), class:"btn btn-danger active ml-md-5 mt-4" do %>
+            <%= link_to customers_confirm_path, class:"btn btn-danger active ml-md-5 mt-4" do %>
               <i class="fas fa-user-slash"></i>
               退会する
             <% end %>
