--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
             <div class="navbar-collapse collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto" id="nav_links", style="color: #800000;">
                 <li>
-                  <%= link_to customer_path(current_customer), class:"nav-link text-light" do %>
-                    <strong>マイページ</strong>
+                  <%= link_to customer_path, class:"nav-link text-light" do %>
+                    <strong>会員情報詳細</strong>
                   <% end %>
                 </li>
                 <li>
