Added favorite function

--- a/app/views/customer/customers/my_page.html.erb
+++ b/app/views/customer/customers/my_page.html.erb
@@ -55,6 +55,12 @@
           </td>
         </tr>
       </table>
+      <% if @favorite_list.present? %>
+        <% @favorite_list.each do |restaurant| %>
+          <%= restaurant.name %>
+          <%= restaurant.content %>
+        <% end %>
+      <% end %>
     </div>
   </div>
 </div>
