Change title of views/customer/homes/about.html.erb to bold

--- a/app/views/customer/homes/about.html.erb
+++ b/app/views/customer/homes/about.html.erb
@@ -4,7 +4,7 @@
 
         <h1 class="mt-4"><strong>About</strong></h1>
         <div>
-          <h4>このサイトについて</h4>
+          <h4><strong>このサイトについて</strong></h4>
           <p class="about">
             Enme（エンミー）は食物アレルギーにより外食に不安を持っている方々にも</br>
             楽しい食事（Enjoyable meal）をしていただける様、</br>
@@ -17,7 +17,7 @@
           <%= image_tag 'about_image.jpg', class: "col-sm-10 col-md-8" %>
         </div>
 
-        <h4 class="mt-5">地域エリアについて</h4>
+        <h4 class="mt-5"><strong>地域エリアについて</strong></h4>
         <div class="row mt-4">
         　<p class="about">
         　   このサイトでは都道府県ごとに地域エリアを分けており、</br>
@@ -64,7 +64,7 @@
           </div>
         </div>
 
-        <h4 class="mt-5">飲食店経営者の皆様へ</h4>
+        <h4 class="mt-5"><strong>飲食店経営者の皆様へ</strong></h4>
           <p class="about mt-4">
             Enme（エンミー）は飲食店経営者の皆様のご協力により、</br>
             アレルギーを持っている方に外食を楽しんで頂くことが出来ます。</br>
