Change title of views/customer/restaurants/search.html.erb to bold

--- a/app/views/customer/restaurants/search.html.erb
+++ b/app/views/customer/restaurants/search.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-11 offset-1">
 
       <div class="search-data">
-        <h4 class="col-md-3 mt-5">飲食店検索</h4>
+        <h4 class="col-md-3 mt-5"><strong>飲食店検索</strong></h4>
         <p><strong>アレルゲンを含まないメニューを提供するお店の絞り込みをします。</strong></p>
 
         <%= form_with model: @customer, url: restaurants_path,method: :get, id: 'search_restaurant', class: 'search_restaurant', local: true do |f| %>
