--- a/app/views/customer/restaurants/show.html.erb
+++ b/app/views/customer/restaurants/show.html.erb
@@ -3,7 +3,7 @@
   <% if flash[:notice] %>
     <%= notice %>
   <% end %>
-  <h4 class="col-md-4 mt-5">店舗詳細</h4>
+  <h4 class="col-md-4 mt-5"><strong>店舗詳細</strong></h4>
 
   <div class='flashing mt-2'>
     <p>※現在登録されているデータは架空です</p>
