Change title of views/customer/restaurants/simple_search.html.erb to bold

--- a/app/views/customer/restaurants/simple_search.html.erb
+++ b/app/views/customer/restaurants/simple_search.html.erb
@@ -4,7 +4,7 @@
 
       <div class="search-data">
         <div></div>
-          <h4 class="col-md-3 mt-5">会員検索</h4>
+          <h4 class="col-md-3 mt-5"><strong>会員検索</strong></h4>
           <p>会員登録したアレルゲン情報を元に簡単検索します</p>
         </div>
 
