--- a/app/views/restaurant/homes/about.html.erb
+++ b/app/views/restaurant/homes/about.html.erb
@@ -4,7 +4,7 @@
 
         <h1 class="mt-4"><strong>About</strong></h1>
         <div>
-          <h4>このサイトについて</h4>
+          <h4><strong>このサイトについて</strong></h4>
           <p class="about">
             Enme（エンミー）は食物アレルギーにより外食に不安を持っている方々にも</br>
             楽しい食事（Enjoyable meal）をしていただける様、</br>
