--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h4 class="col-md-3 mt-5">新規会員登録</h4>
+      <h4 class="col-md-3 mt-5"><strong>新規会員登録</strong></h4>
 
       <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do  |f| %>
         <%= render "customer/shared/error_messages", resource: resource %>
