Change title of views/restaurant/homes/top.html.erb to bold

--- a/app/views/restaurant/homes/top.html.erb
+++ b/app/views/restaurant/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div class="container col-10 offset-1">
-  <h4 class="col-md-4 mt-5">登録情報詳細</h4>
+  <h4 class="col-md-4 mt-5"><strong>登録情報詳細</strong></h4>
 
   <div class='flashing mt-2'>
     <p>※現在登録されているデータは架空です</p>
